Removed mandatory line height of blocks Made Iosevka both the primary font and the monospace font Fixed bug with insufficient padding below page title causing clipped text

--- a/src/_blocks.scss
+++ b/src/_blocks.scss
@@ -83,7 +83,7 @@ a:hover > .bullet-container .bullet {
 
 .ls-block div.items-center {
   position: relative;
-  height: 26px !important;
+  // height: 26px !important;
 }
 
 // hovering block indicator
