--- a/src/_headings.scss
+++ b/src/_headings.scss
@@ -1,7 +1,7 @@
 :root {
   --ct-page-title-color: var(--ct-bold-color);
   --ct-page-title-font-size: 36px;
-  --ct-page-title-line-height: calc(1em + 5px);
+  --ct-page-title-line-height: calc(1.1sem);
   --ct-page-title-font-weight: 400;
   --ct-page-title-font-style: normal;
 
@@ -19,7 +19,7 @@
 /* Heading & Page title */
 h1.title {
   // margin-top: 8px;
-  padding-bottom: unset;
+  padding-bottom: 5px;
   font-family: var(--ct-page-title-font-family);
   font-size: var(--ct-page-title-font-size);
   font-weight: var(--ct-page-title-font-weight);
