--- a/src/bullet_threading.scss
+++ b/src/bullet_threading.scss
@@ -67,7 +67,7 @@
 
   div.items-center {
     position: relative;
-    height: 26px !important;
+    // height: 26px !important;
   }
 
   /* Fix for headings like h1, h2 etc */
